Package: R.rsp
==============

Version: 0.10.0 [2013-11-03]
o Now "child" RSP documents imported into a "parent" RSP document
  via <%@import ...%>, sees all meta data of the parent, and any 
  meta data set by the child document are also set in the parent 
  one.  Added a system test for this.


Version: 0.9.30 [2013-11-03]
o CLEANUP: Now the 'md.rsp+knitr:pandoc' vignette engine suppresses
  messages generated by knitr::pandoc().


Version: 0.9.29 [2013-10-17]
o BUG FIX: The browseRsp() demo page assumed that 'R.utils' was
  attached.


Version: 0.9.28 [2013-10-14]
o DOCUMENTATION: Updates to vignettes: Added rsource() command to
  'RSP Markup Language - Reference Card' vignette'.  Adjusted
  the other two vignettes to reflect usage of vignettes/.
o Now the package vignettes are in vignettes/ and no longer in
  inst/doc/, which will not be supported by R (>= 3.1.0).
o ROBUSTNESS: Now package only imports explicitly what is needed
  from dependent packages.
o ROBUSTNESS: Vignette 'RSP-refcard.tex.rsp' assumed that the
  'R.rsp' package was attached.
o BUG FIX: If an RspEvalDirective for language="R" had a parse or
  an evaluation error, the intended error message was not generated
  because it in turn would give another error.


Version: 0.9.27 [2013-10-13]
o GENERALIZATION: Updated the framework for building non-Sweave
  vignettes also under R (< 3.0.0) to support the vignettes/
  directory in addition to inst/doc/.  Thanks to Jari Oksanen,
  University of Oulu, Finland, for the pointers on how to do this.


Version: 0.9.26 [2013-09-28]
o No isCapableOf() also supports version specifications.
o Now the 'R.rsp' Package object is also available when the
  package is only loaded (but not attached).
o BUG FIX: The 'Dynamic document creation using RSP' vignette
  assumed that evalCapture() of 'R.utils' was on the search path.
o ROBUSTNESS/BUG FIX: Now the 'Introductory slides on RSP' vignette
  better detects what version of 'pandoc' is available and adapts